[skip ci] Update issue template (#1308)

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -70,10 +70,10 @@ body:
   - type: checkboxes
     id: latest
     attributes:
-      label: CI Version/CI 版本
-      description: By submitting this issue, you must use latest CI version of LSPosed/请确保你已经使用最新 CI 版本
+      label: Version requirement/版本要求
+      description: To submit this issue, you must use latest debug CI version of LSPosed and enable verbose log/请确保你已经使用最新 CI 调试版本且启用详细日志
       options:
-        - label: I am using latest CI version of LSPosed/我正在使用最新 CI 版本
+        - label: I am using latest debug CI version of LSPosed and enable verbose log/我正在使用最新 CI 调试版本且启用详细日志
           required: true
   - type: textarea
     attributes:
