Fix deploy key (#1411)

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -136,6 +136,8 @@ jobs:
       run: |
         if [ ! -z "${{ secrets.FILES_REPO }}" ]; then
           cd core/release
+          umake 077
+          echo ${{ secrets.FILES_REPO_KEY }} | base64 --decode > deploy
           REPO=$(echo ${{ secrets.FILES_REPO }} | base64 -d)
           git init
           git add -A
@@ -143,6 +145,6 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git commit -m "${{ github.sha }}"
           git tag "files-${{ github.sha }}"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${REPO}.git "files-${{ github.sha }}"
+          GIT_SSH_COMMAND="ssh -i ${PWD}/deploy" git push git@github.com:${REPO}.git "files-${{ github.sha }}"
           for file in $(ls .); do echo "::notice::Download $file from https://cdn.jsdelivr.net/gh/${REPO}@files-${{ github.sha }}/$file"; done
         fi
